chore: refresh site copy language

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Tristan Drummond · CTO & Dream-first builder" />
     <meta
       property="og:description"
-      content="Clean, cinematic personal site for Tristan Drummond — WorkWeek CTO and humble dreamer building for African creators."
+      content="Clean personal site for Tristan Drummond — WorkWeek CTO and humble dreamer building for African creators."
     />
     <meta property="og:url" content="https://tristdrum.com" />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/27028099" />
